# RTOS

./: .gitignore  README.md
Digikey/: pico_sdk_import.cmake
Digikey/Challenges/: Readme.txt  memory.c
Main/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  main.c  main.h
Main/I2C/: Bme280.c  Bme280.h
Main/SPI/: W25Q16.c  W25Q16.h
Main/exe/: main.uf2
Misc/Digikey/: CMakeLists.txt  FreeRTOSConfig.h  main.c  main.h
Misc/Digikey/Challenges/: queue.c  tasks.c
